# sc-component-manager

./: .clang-format  .gitignore  .gitmodules  404.html  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  COPYING.MIT  README.md  conanfile.py  dependencies.cmake  ellipsis.yaml  index.html  mkdocs.yml  repo.path  repos.txt  sc-component-manager.ini
src/: CMakeLists.txt  main.cpp
src/commandsModule/: CMakeLists.txt  commands_module.cpp  commands_module.hpp
src/commandsModule/agents/: sc_component_manager_agent_init.cpp  sc_component_manager_agent_init.hpp  sc_component_manager_agent_install.cpp  sc_component_manager_agent_install.hpp  sc_component_manager_agent_search.cpp  sc_component_manager_agent_search.hpp
src/commandsModule/keynodes/: commands_keynodes.cpp  commands_keynodes.hpp
src/commandsModule/tests/structures/: action_components_search.gwf
src/manager/: sc_component_manager.cpp  sc_component_manager.hpp  sc_component_manager_impl.cpp  sc_component_manager_impl.hpp
src/manager/agents/: CMakeLists.txt
src/manager/agents/common-lib/: CMakeLists.txt
src/manager/agents/common-lib/src/: common_utils.cpp  repository_url_parser.cpp
src/manager/agents/common-module/: CMakeLists.txt  common_module.hpp  sc_component_manager_command.hpp
src/manager/agents/common-module/commands/: sc_component_manager_command.hpp
src/manager/agents/common-module/constants/: command_constants.cpp  command_constants.hpp
src/manager/agents/common-module/downloader/: downloader_git.hpp  downloader_google_drive.hpp  downloader_handler.cpp  downloader_handler.hpp
src/manager/agents/common-module/keynodes/: ScComponentManagerKeynodes.cpp  ScComponentManagerKeynodes.hpp
src/manager/agents/common-module/module/: common_module.cpp  common_module.hpp
src/manager/agents/common-module/src/: command_constants.cpp  downloader_handler.cpp  sc_component_utils.cpp
src/manager/agents/common-module/url_parser/: repository_url_parser.cpp  repository_url_parser.hpp
src/manager/agents/common-module/utils/: common_utils.cpp  (+3 more)
src/manager/agents/init-module/: CMakeLists.txt  init_module.cpp  init_module.hpp
src/manager/agents/install-module/: CMakeLists.txt  install-module.cpp  install-module.hpp
src/manager/agents/search-module/: CMakeLists.txt  search-module.cpp  search-module.hpp
src/manager/command_parser/: sc_component_manager_command_parser.hpp
src/manager/commands/: commands_module.cpp  commands_module.hpp  sc_component_manager_command.hpp  sc_component_manager_command_handler.hpp  sc_component_manager_handler.hpp
src/manager/commands/command_init/: sc_component_manager_agent_init.cpp  sc_component_manager_agent_init.hpp  sc_component_manager_command_init.cpp  sc_component_manager_command_init.hpp
src/manager/commands/command_install/: sc_component_manager_agent_install.cpp  sc_component_manager_agent_install.hpp  sc_component_manager_command_install.cpp  sc_component_manager_command_install.hpp
src/manager/commands/command_search/: sc_component_manager_agent_search.cpp  sc_component_manager_agent_search.hpp  sc_component_manager_command_search.cpp  sc_component_manager_command_search.hpp
src/manager/commands/constants/: command_constants.cpp  command_constants.hpp
src/manager/commands/keynodes/: ComponentManagerKeynodes.cpp  ComponentManagerKeynodes.hpp  ScComponentManagerKeynodes.cpp  ScComponentManagerKeynodes.hpp
src/manager/commands/url_parser/: repository_url_parser.hpp
src/manager/console-interface/: CMakeLists.txt  sc_component_manager.cpp  sc_component_manager.hpp  sc_component_manager_command_handler.hpp  sc_component_manager_handler.hpp  sc_component_manager_impl.hpp
src/manager/console-interface/command_handler/: sc_component_manager_command_handler.cpp  sc_component_manager_command_handler.hpp
src/manager/console-interface/command_parser/: sc_component_manager_command_parser.hpp
src/manager/console-interface/sc-component-manager-factory/: sc_component_manager_factory.cpp  sc_component_manager_factory.hpp
src/manager/console-interface/src/: sc_component_manager.cpp
src/manager/console-interface/test/: CMakeLists.txt
src/manager/downloader/: downloader.hpp  downloader_git.hpp  downloader_google_drive.hpp  downloader_handler.cpp  downloader_handler.hpp
src/manager/handler/: sc_component_manager_command.hpp  sc_component_manager_command_handler.hpp  sc_component_manager_command_init.hpp  sc_component_manager_handler.hpp
src/manager/interface_manager/: CMakeLists.txt  sc_component_manager_command_handler.hpp  sc_component_manager_handler.hpp  sc_component_manager_impl.cpp  sc_component_manager_impl.hpp
src/manager/interface_manager/sc-component-manager-factory/: sc_component_manager_factory.hpp
src/manager/interface_manager/utils/: sc_component_utils.cpp
src/manager/parser/: sc_component_manager_parser.hpp
src/manager/sc-component-manager-facory/: sc_component_manager_factory.cpp  sc_component_manager_factory.hpp
src/manager/sc-component-manager-factory/: sc_component_manager_factory.cpp
src/manager/utils/: sc_component_utils.cpp  sc_component_utils.hpp
src/module/: sc_component_manager_module.cpp  sc_component_manager_module.hpp
src/tests/: CMakeLists.txt
src/tests/test-structures/: action_components_install.scs
src/tests/test-structures/components-search/: all_arguments_action_components_search.scs  empty_arguments_action_components_search.scs  incompatible_classes_action_components_search.scs  incompatible_explanations_action_components_search.scs  one_author_action_components_search.scs  one_id_action_components_search.scs  one_note_action_components_search.scs  two_authors_action_components_search.scs  two_classes_action_components_search.scs  two_keys_action_components_search.scs  two_notes_action_components_search.scs  zero_explanations_action_components_search.scs  zero_ids_action_components_search.scs  zero_keys_action_components_search.scs  zero_purposes_action_components_search.scs
src/tests/units/: agent_tests.cpp  sc_agents_test.hpp  sc_component_manager_test.hpp  test_command_parser.cpp  test_url_parser.cpp
(+142 files in other folders)
